[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
once_cell = "1.10.0"
phf = { version = "0.11", features=["macros"] }
